EPBDS-8537 Expose protected branches and tidy the branch-management backend